Correction mineur sokoban